--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -29,16 +30,21 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.supets.pet.activity.TimeActivity"
-            android:screenOrientation="landscape">
+            android:name="com.supets.pet.activity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.supets.pet.activity.MainActivity"
+            android:name="com.supets.pet.activity.SmsActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="com.supets.pet.activity.TimeActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="com.supets.pet.activity.DateTimeActivity"
             android:screenOrientation="landscape" />
         <!-- 静态注册系统短信广播接收器 -->
         <receiver android:name="com.supets.pet.sms.SmsRecerver">
