--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+        android:name="com.supets.pet.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,7 +32,7 @@
 
         <activity
             android:name="com.supets.pet.activity.MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -42,6 +43,9 @@
             android:screenOrientation="landscape" />
         <activity
             android:name="com.supets.pet.activity.TimeActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="com.supets.pet.activity.WeatherInfoActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name="com.supets.pet.activity.DateTimeActivity"
