--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
         <activity
             android:name="com.supets.pet.activity.MainActivity"
-            android:screenOrientation="landscape">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -51,7 +51,16 @@
             android:name="com.supets.pet.activity.CompassActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name="com.supets.pet.activity.LevelVialActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.supets.pet.activity.RotationLedActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name="com.supets.pet.activity.DateTimeActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="com.supets.pet.activity.LightActivity"
             android:screenOrientation="landscape" />
         <!-- 静态注册系统短信广播接收器 -->
         <receiver android:name="com.supets.pet.sms.SmsRecerver">
