--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
             android:name="com.supets.pet.activity.DateTimeActivity"
             android:screenOrientation="landscape" />
         <activity
+            android:name="com.supets.pet.activity.BusActivity"
+            android:screenOrientation="landscape" />
+        <activity
             android:name="com.supets.pet.activity.LightActivity"
             android:screenOrientation="landscape" />
         <!-- 静态注册系统短信广播接收器 -->
