--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="com.supets.pet.activity.MainActivity"
+            android:name="com.supets.pet.module.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,34 +39,34 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.supets.pet.activity.SmsActivity"
+            android:name="com.supets.pet.module.led.SmsActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name="com.supets.pet.activity.TimeActivity"
+            android:name="com.supets.pet.module.led.TimeActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name="com.supets.pet.activity.WeatherInfoActivity"
+            android:name="com.supets.pet.module.led.WeatherInfoActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name="com.supets.pet.activity.CompassActivity"
+            android:name="com.supets.pet.module.sensor.CompassActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.supets.pet.activity.LevelVialActivity"
+            android:name="com.supets.pet.module.sensor.LevelVialActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.supets.pet.activity.RotationLedActivity"
+            android:name="com.supets.pet.module.sensor.RotationLedActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.supets.pet.activity.DateTimeActivity"
+            android:name="com.supets.pet.module.led.DateTimeActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name="com.supets.pet.activity.BusActivity"
+            android:name="com.supets.pet.module.led.BusActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name="com.supets.pet.activity.LightActivity"
+            android:name="com.supets.pet.module.sensor.LightActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name="com.supets.pet.activity.LCD1602Activity"
+            android:name="com.supets.pet.module.led.LCD1602Activity"
             android:screenOrientation="landscape" />
         <!-- 静态注册系统短信广播接收器 -->
         <receiver android:name="com.supets.pet.sms.SmsRecerver">
