--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,9 @@
             android:name="com.supets.pet.module.ttl.D74Activity"
             android:screenOrientation="portrait" />
         <activity
+            android:name="com.supets.pet.module.ttl.D7400Activity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name="com.supets.pet.module.ttl.D74138Activity"
             android:screenOrientation="portrait" />
         <activity
